[tool.poetry]
name = "holamundo"
version = "0.1.0"
description = "Hola mundo! con PySide6"
authors = ["Ferran Cunyat Pellicer"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^>=3.9,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
