[tool.poetry]
name = "holamundo"
version = "0.1.5"
description = "Hola mundo! con PySide6"
authors = ["Ferran Cunyat Pellicer"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
# PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]
myst-nb = {version = "^0.15.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
holamundo = "holamundo.holamundo:main"